pod-voting.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: voting-app-pod
  labels: 
    name: voting-app-pod
    app: demo-voting-app

spec:
  containers:
      - name: voting-app
        image: dockersamples/examplevotingapp_vote
        ports:
          - containerPort: 80
