postgres-pod.yml
apiVersion: v1
kind: Pod 
metadata:
  name: postgres-app-pod
  labels: 
    name: postgres-app-pod

spec:
  containers:
      - name: postgres
        image: postgres:9.4
        ports:
          - containerPod: 5432
