redis-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: redis-app-pod
  labels: 
    name: redis-app-pod

spec:
  containers:
      - name: redis
        image: redis
        ports:
          - containerPod: 6379
