result-app-pod.yml
apiVersion: v1
kind: Pod 
metadata:
  name: result-app-pod
  labels: 
    name: result-app-pod

spec:
  containers:
      - name: result-app
        image: dockersamples/examplevotingapp_result
        ports:
          - containerPod: 80
