postgres-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: db
  labels: 
    name: db-service

spec:
  ports:
    - port: 5432
      targetPort: 5432
  
  selector:
    labels: 
      name: postgres-app-pod
