redis.service.yml
apiVersion: v1
kind: Service 
metadata:
  name: redis-service
  labels: 
    name: redis

spec:
  ports:
    - port: 6379
      targetPort: 6379
  
  selector:
    labels: 
      name: redis-app-pod
