result-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: result-service
    labels: 
      name: result-service

spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  
  selector:
    labels: 
      name: result-app-pod
