voting-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: voting-service
    labels: 
      name: voting-service

spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  
  selector:
    labels: 
      name: voting-app-pod
